# Privy_zk

./: .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  DESIGN.md  PRD.md  findings.md  progress.md  task_plan.md  目的.md
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: main.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/demos/: layout.tsx
frontend/src/app/demos/darkpool/: page.tsx
frontend/src/app/demos/poker/: page.tsx
frontend/src/app/demos/vote/: page.tsx
frontend/src/components/: animated-container.tsx  footer.tsx  gradient-text.tsx  navbar.tsx  particle-background.tsx  zk-proof-animation.tsx
programs/privy-pstree/: Cargo.toml
programs/privy-pstree/src/: lib.rs
programs/privy-verifier/: Cargo.toml
programs/privy-verifier/src/: lib.rs
sdk/privy-svm/: Cargo.toml
sdk/privy-svm/src/: client.rs  hash.rs  lib.rs  merkle.rs  types.rs
tests/: devnet-test.ts  integration.test.ts  privy-svm.ts
