[workspace]
resolver = "2"
members = [
    "programs/privy-verifier",
    "programs/privy-pstree",
    "sdk/privy-svm",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/magiciosemv/Privy_zk"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-program = "2.3.0"
solana-sdk = "=1.18.26"
solana-client = "=1.18.26"
borsh = "1.5"
borsh-derive = "1.5"
ark-bn254 = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false, features = ["std"] }
ark-ff = { version = "0.4", default-features = false, features = ["std"] }
ark-std = { version = "0.4", default-features = false, features = ["std"] }
ark-serialize = { version = "0.4", default-features = false }
ark-crypto-primitives = { version = "0.4", default-features = false, features = ["std"] }
light-poseidon = "0.2"
sha2 = "0.10"
rand = "0.8"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
hex = "0.4"
base64 = "0.22"

[profile.release]
overflow-checks = true
codegen-units = 1
lto = "thin"
