[package]
name = "privy-svm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Privy SVM Rust SDK - client-side privacy program utilities"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
borsh = { workspace = true }
borsh-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
